Fix anchor links wrapped around buttons to buttons wrapped around anchors and amend the style to reflect changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,17 +137,13 @@ main {
     padding: 1em;
     border-radius: 8px;
     margin-right: 3%;
+    text-align: center;
 }
 
 .call-to-action h2 {
     font-size: 1.3rem;
-    text-align: center;
     margin-bottom: 1em;
     line-height: 1.5em;
-}
-
-.call-to-action a {
-    margin-left: 30%;
 }
 
 .call-to-action span {
@@ -353,13 +349,21 @@ footer {
     text-shadow: 1px 2px 2px rgba(65, 67, 62, 0.34);
 }
 
-/* Button */
+/* Buttons */
+.red-button a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    width: 100%;
+    padding: 9px;
+}
+
 .red-button {
     width: 90px;
     font-size: 16px;
     background-color: #931507;
     border-radius: 8px;
-    border: #931507 solid 3px;
+    border-style: none;
     height: 40px;
     color: #f5eae3;
     font-weight: 600;
@@ -368,6 +372,7 @@ footer {
 
 .red-button:hover {
     color: #931507;
+    border: #931507 solid 3px;
     background-color: #f5eae3;
     box-shadow: 1px 2px 2px rgba(65, 67, 62, 0.34);
 }
@@ -376,6 +381,7 @@ footer {
     width: 90px;
     font-size: 16px;
     background-color: #355e3b;
+    border-style: none;
     border-radius: 8px;
     border: #355e3b solid 3px;
     height: 40px;
@@ -590,10 +596,6 @@ footer {
 
     .call-to-action h2 {
         font-size: 2rem;
-    }
-
-    .call-to-action a {
-        margin-left: 35%;
     }
 
     /* About section */
